# posix-syslog

./: .gitignore  CMakeLists.txt  README.md  package.json  pnpm-lock.yaml  tsconfig.json
sample-node-app/: index.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
sample-sveltekit-syslog/: .npmrc  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
sample-sveltekit-syslog/src/lib/server/: logger.ts
sample-sveltekit-syslog/src/routes/: +page.server.ts  +page.svelte
src/: index.ts  syslog.cc
test/: test-syslog.ts
